--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
         <meta name="Description" content="This is My New Hugo Site"><meta property="og:title" content="Study by the way" />
 <meta property="og:description" content="This is My New Hugo Site" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://example.org/" />
+<meta property="og:url" content="http://www.guoan.com/" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Study by the way"/>
 <meta name="twitter:description" content="This is My New Hugo Site"/>
 <meta name="theme-color" content="#ffffff">
 <meta name="msapplication-TileColor" content="#da532c">
-<link rel="canonical" href="http://example.org/" />
+<link rel="canonical" href="http://www.guoan.com/" />
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -28,10 +28,10 @@
     {
         "@context": "http://schema.org",
         "@type": "WebSite",
-        "url": "http:\/\/example.org\/","inLanguage": "en","author": {
+        "url": "http:\/\/www.guoan.com\/","inLanguage": "en","author": {
                 "@type": "Person",
                 "name": "xxxx"
-            },"description": "This is My New Hugo Site","image": "http:\/\/example.org\/cover.png","thumbnailUrl": "http:\/\/example.org\/logo.png","name": "Study by the way"
+            },"description": "This is My New Hugo Site","image": "http:\/\/www.guoan.com\/cover.png","thumbnailUrl": "http:\/\/www.guoan.com\/logo.png","name": "Study by the way"
     }
     </script></head>
     <body><script>
@@ -79,7 +79,7 @@
         data-src=""
         alt="avatar"
         title="Home" /></a>
-        </div><h2 class="home-description"><div id="id-3c5f93" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/xxxx" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
+        </div><h2 class="home-description"><div id="id-1799f3" class="typeit"></div></h2><div class="home-social-links"><a href="https://github.com/xxxx" title="GitHub" target="_blank" rel="noopener noreffer me"><i class="fab fa-github-alt fa-fw"></i></a>
 <a href="https://www.instagram.com/xxxx" title="Instagram" target="_blank" rel="noopener noreffer me"><i class="fab fa-instagram fa-fw"></i></a>
 <a href="https://t.me/xxxx" title="Telegram" target="_blank" rel="noopener noreffer me"><i class="fab fa-telegram-plane fa-fw"></i></a>
 <a href="https://weibo.com/xxxx" title="微博" target="_blank" rel="noopener noreffer me"><i class="fab fa-weibo fa-fw"></i></a>
@@ -110,8 +110,8 @@
             });
         });
     </script><script>
-        window.typeitArr = [["id-3c5f93"]];
+        window.typeitArr = [["id-1799f3"]];
     </script><script>
-        window.contentMap = {"id-3c5f93":"A meteorologist interested in ML/DL"};
+        window.contentMap = {"id-1799f3":"A meteorologist interested in ML/DL"};
     </script><link rel="stylesheet" href="/lib/iconfont/iconfont.min.css"><link rel="stylesheet" href="/lib/lightgallery/lightgallery.min.css"><script src="/lib/smooth-scroll/smooth-scroll.polyfills.min.js"></script><script src="/lib/lazysizes/lazysizes.min.js"></script><script src="/lib/lightgallery/lightgallery.min.js"></script><script src="/lib/lightgallery/lg-thumbnail.min.js"></script><script src="/lib/lightgallery/lg-zoom.min.js"></script><script src="/lib/typeit/typeit.min.js"></script><script src="/js/theme.min.js"></script></body>
 </html>
